캐러셀 마무리

--- a/MatZipSpring/src/main/webapp/resources/css/common.css
+++ b/MatZipSpring/src/main/webapp/resources/css/common.css
@@ -50,7 +50,7 @@ input { font-family: 'yg-jalnan'; font-size: 1.2em; }
 #container > header > #headerRight { flex-grow: 1; display: flex; align-items: center;
 									 justify-content: flex-end; padding-right: 50px; }
 
-#container > section { flex-grow: 1; }
+#container > section { flex-grow: 1; overflow: auto;}
 
 #container > footer { display: flex; height: 60px;
 					  justify-content: center; align-items: center;
