--- a/MatZipSpring/src/main/webapp/resources/css/restaurant.css
+++ b/MatZipSpring/src/main/webapp/resources/css/restaurant.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 .recMenuContainer {
+	z-index: 20;
 	width: 100%;
 	height: 230px;
 	overflow-x: scroll;
@@ -67,4 +68,51 @@
 	top: 0;
 	right: 5px;
 }
+#carouselContainer {
+	transition: 1s;
+	opacity: 0;
+	z-index: -10;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #000A;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+#carouselContainer #imgContainer {
+	width: 50%;
+	height: 80%;
+	background-color: #fff;
+	position: relative;
+}
+#carouselContainer .material-icons {
+	display: inline-block;
+	position: absolute;
+	top: 40px;
+	right: 40px;
+	color: #fff;
+	font-size: 3rem;
+	cursor: pointer;
+}
+.swiper-container {
+	width: 100%;
+    height: 100%;
+}
 
+#sectionContainerCenter {
+	z-index: 20;
+	overflow: auto;	
+}
+.swiper-container .swiper-wrapper .swiper-slide {
+	display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-container .swiper-wrapper .swiper-slide img {
+	width: 100%;
+	overflow: hidden;
+}
