찜 메뉴 작업중

--- a/MatZipSpring/src/main/webapp/resources/css/common.css
+++ b/MatZipSpring/src/main/webapp/resources/css/common.css
@@ -32,7 +32,10 @@ html, body {
 .bg_black {
 	background-color: #000;
 }
-
+.gugi {
+	font-family: 'Gugi';
+	font-weight: 500;
+}
 a { 
 	text-decoration: none; color: black; 
 	font-family: 'GmarketSansBold'; font-size: 1.3em; }
